--- a/APP/CRUD-GENERATOR/gs-starter/angular.json
+++ b/APP/CRUD-GENERATOR/gs-starter/angular.json
@@ -17,7 +17,8 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/gs-starter",
+            
+            "outputPath": "dist/",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
