--- a/APP/CRUD-GENERATOR/gs-starter/angular.json
+++ b/APP/CRUD-GENERATOR/gs-starter/angular.json
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            
+
             "outputPath": "dist/",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -27,10 +27,11 @@
             "assets": [
               "src/favicon.ico",
               "src/assets"
-              
+
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+
             ],
             "scripts": []
           },
