--- a/APP/CRUD-GENERATOR/gs-starter/package.json
+++ b/APP/CRUD-GENERATOR/gs-starter/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gs-starter",
   "version": "0.0.0",
-  "main":"main.js",
+  "main": "main.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "~8.2.7",
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
+    "bootstrap": "^4.4.1",
     "electron": "^7.1.10",
     "ngx-bootstrap-navbar": "0.0.5",
     "rxjs": "~6.4.0",
