--- a/APP/CRUD-GENERATOR/gs-starter/package.json
+++ b/APP/CRUD-GENERATOR/gs-starter/package.json
@@ -25,6 +25,8 @@
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
     "bootstrap": "^4.4.1",
+    "cordova-android": "^8.1.0",
+    "cordova-plugin-device": "^2.0.3",
     "electron": "^7.1.10",
     "ngx-bootstrap-navbar": "0.0.5",
     "rxjs": "~6.4.0",
@@ -41,6 +43,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^8.10.59",
     "codelyzer": "^5.0.0",
+    "cordova-plugin-whitelist": "^1.3.4",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -52,5 +55,15 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
+  },
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whiteList": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-whitelist": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
