--- a/APP/CRUD-GENERATOR/gs-starter/platforms/android/app/src/main/assets/www/assets/config/config.json
+++ b/APP/CRUD-GENERATOR/gs-starter/platforms/android/app/src/main/assets/www/assets/config/config.json
@@ -1,1 +1,5 @@
-{"main_api":"http://192.168.60.231:5500"}
+
+
+{"api_roots": {"main_api":"http://192.168.43.231:5500"}, "main": {"app_name": "Easy STOCK"}}
+
+
