--- a/APP/CRUD-GENERATOR/gs-starter/src/assets/config/config.json
+++ b/APP/CRUD-GENERATOR/gs-starter/src/assets/config/config.json
@@ -1,1 +1,5 @@
-{"main_api":"http://localhost:5500"}
+
+
+{"api_roots": {"main_api":"http://localhost:5500"}, "main": {"app_name": "Easy STOCK"}}
+
+
