--- a/APP/CRUD-GENERATOR/gs-starter/src/assets/config/config.json
+++ b/APP/CRUD-GENERATOR/gs-starter/src/assets/config/config.json
@@ -1,5 +1,5 @@
 
 
-{"api_roots": {"main_api":"http://localhost:5500"}, "main": {"app_name": "Easy STOCK"}}
+{"api_roots": {"main_api":"http://localhost:5500"}, "main": {"app_name": "GS-STARTER"}}
 
 
